tests/invalid/in_set_wrong_elem_type/main.py
def run_case() -> None:
    s: set[int] = {1, 2}
    bad: bool = 1.0 in s


if __name__ == "__main__":
    run_case()
